# Auto_update_ip

./: CMakeLists.txt  README.md
include/: CheckIP.h  file_exists.h  get_path.h
src/: CheckIP.cpp  file_exists.cpp  get_path.cpp  main.cpp
